<resources>
    <string name="app_name">着调</string>
    <string name="title_mine">我的</string>
    <string name="title_classroom">讲堂</string>
    <string name="title_recommend">推荐</string>
    <string name="title_notice">通知公告</string>
    <string name="title_qinfang">琴房</string>
    <string name="title_cs">客服</string>
    <string name="title_user_info_edit">个人资料编辑</string>
    <string name="title_guide">顾问详情</string>
    <string name="title_select_service">服务项目</string>
    <string name="title_select_date">选择日期</string>
    <string name="title_order_edit">编辑订单</string>
    <string name="title_pay_ins">支付信息描述</string>
    <string name="title_upload_pay_img">上传支付凭证照片</string>
    <string name="title_upload_passport_img">上传护照第一页照片</string>
    <string name="title_pay">支付订单</string>
    <string name="title_order_detail">订单详情</string>
    <string name="title_comment">评论</string>
    <string name="title_find_pass">设置新密码</string>
    <string name="title_set_info">完善资料</string>
    <string name="title_tourist">游客详情</string>
    <string name="title_news_list">PianoCourse新闻</string>
    <string name="title_contact">通讯录</string>
    <string name="title_chose_currency">选择币种</string>
    <string name="title_service">体验项目</string>
    <string name="title_setting">设置</string>
    <string name="lab_city0">锦绣一览</string>
    <string name="lab_city1">旅行顾问</string>
    <string name="lab_contact_tourist">游 客</string>
    <string name="lab_contact_guide">顾 问</string>
    <string name="lab_activity">体验</string>
    <string name="lab_discover">发现</string>
    <string name="lab_guide">指南</string>
    <string name="btn_call_consult">电话咨询</string>
    <string name="btn_cs_online">点击聊天</string>
    <string name="btn_submit">提交</string>
    <string name="btn_logout">退出登录</string>
    <string name="btn_find_guide">发现导游</string>
    <string name="btn_reserve">预定</string>
    <string name="btn_about_us">关于我们</string>
    <string name="btn_pass_certificate">通过认证</string>
    <string name="btn_chat">聊天</string>
    <string name="btn_change_currency">切换币种</string>
    <string name="btn_add">添加</string>
    <string name="btn_upload_pay_order">上传支付凭证</string>
    <string name="btn_click_upload">点击上传</string>
    <string name="btn_add_service">添加服务</string>
    <string name="btn_delete">删除</string>
    <string name="btn_pay">支付</string>
    <string name="btn_terms_of_service_confirm">注册即同意%1$sPianoCourse用户服务条款与隐私政策%2$s</string>
    <string name="btn_login">登录</string>
    <string name="btn_create_new_contact">创建新账号</string>
    <string name="btn_find_pass">忘记密码</string>
    <string name="btn_finish">完成</string>
    <string name="btn_re_send">重新发送</string>
    <string name="btn_sign_up">注册</string>
    <string name="btn_send_code">发送</string>
    <string name="btn_help">帮助</string>
    <string name="ben_load_more">查看更多</string>
    <string name="btn_record_audio">按住说话</string>
    <string name="btn_record_audio_end">松开结束</string>
    <string name="btn_recording_cancel_tip">松开手指，取消发送</string>
    <string name="btn_recording_cancel">手指上滑，取消发送</string>
    <string name="btn_check_quick">快速审核</string>
    <string name="btn_contact">通讯录</string>
    <string name="btn_my_activity">我负责的体验</string>
    <string name="btn_done">完成</string>
    <string name="btn_img">图片</string>
    <string name="btn_copy">复制</string>
    <string name="btn_next">下一步</string>
    <string name="btn_check">审核</string>
    <string name="btn_change">换一批</string>
    <string name="btn_add_contact">添加到通讯录</string>
    <string name="btn_delete_contact">从通讯录删除</string>
    <string name="btn_all_comment">查看所有评论</string>
    <string name="btn_consult">咨询</string>
    <string name="btn_follow">关注</string>
    <string name="btn_followed">已关注</string>
    <string name="btn_publish">发布</string>
    <string name="btn_schedule">管理日程</string>
    <string name="key_card_num">卡号</string>
    <string name="key_swift_bic">银行识别代码</string>
    <string name="key_deposit_bank">开户行</string>
    <string name="key_my_followed_guide">我的关注</string>
    <string name="key_my_order">我的订单</string>
    <string name="key_my_favorite">收藏</string>
    <string name="key_feedback">意见反馈</string>
    <string name="key_setting">设置</string>
    <string name="key_nickname">昵称</string>
    <string name="key_sex">性别</string>
    <string name="key_birth">生日</string>
    <string name="key_piano_time">开始练琴时间</string>
    <string name="key_signature">个性签名</string>
    <string name="key_piano_level">钢琴等级</string>
    <string name="key_modify_pass">重置密码</string>
    <string name="key_upgrade">检查更新</string>
    <string name="key_clean_chat">清除聊天记录</string>
    <string name="key_clean_cache">清空缓存</string>
    <string name="key_contact_cs">联系客服</string>
    <string name="key_counselor">顾问:</string>
    <string name="key_place">地点:</string>
    <string name="key_push_switch">推送开关</string>
    <string name="key_date_begin">开始日期</string>
    <string name="key_date_end">结束日期</string>
    <string name="key_total">总计</string>
    <string name="key_number_of_people">出行人数</string>
    <string name="key_share_to">把ta推荐给朋友</string>
    <string name="key_remark">备注</string>
    <string name="key_introduction">个人介绍</string>
    <string name="key_charge_explain">服务费用</string>
    <string name="key_charge_explain_tourist">费用说明</string>
    <string name="key_guide_comment">游客评论</string>
    <string name="key_guide_schedule">顾问日程</string>
    <string name="key_avatar">头像</string>
    <string name="key_reserve_instruction">预定说明</string>
    <string name="key_guide_guarantee">顾问担保</string>
    <string name="key_attention">常见问题</string>
    <string name="key_terms_of_service">服务条款与隐私政策</string>
    <string name="key_order_id">订单编号</string>
    <string name="key_guide_name">旅行顾问:</string>
    <string name="key_create_time">创建时间</string>
    <string name="key_order_status">订单状态</string>
    <string name="key_account">账号:</string>
    <string name="key_days">出行天数</string>
    <string name="key_name">姓名</string>
    <string name="key_id">身份证号码</string>
    <string name="key_email">邮箱</string>
    <string name="key_weixin">微信</string>
    <string name="key_address">详细住址</string>
    <string name="key_area">服务区域</string>
    <string name="key_language">语种</string>
    <string name="key_bank">开户银行</string>
    <string name="key_bank_num">银行卡号</string>
    <string name="key_driving_license">是否有驾照</string>
    <string name="key_offer_car">是否提供汽车</string>
    <string name="key_trade">所属行业</string>
    <string name="key_company_name">所在公司/学校名称</string>
    <string name="key_my_schedule">我的日程</string>
    <string name="key_my_comment">游客评论</string>
    <string name="key_how_to_guide">如何成为旅行顾问</string>
    <string name="key_guide_rule">顾问规则</string>
    <string name="key_personal_profile">个人简介</string>
    <string name="key_date_reserve">预约日期</string>
    <string name="key_activity_2">体验项目:</string>
    <string name="key_activity">体验项目</string>
    <string name="key_activity_num">体验编号</string>
    <string name="key_identification">认证身份</string>
    <string name="key_tourist">下单游客:</string>
    <string name="key_order_time">下单时间:</string>
    <string name="key_service_amount">服务费用</string>
    <string name="value_consult_call">+86 4008155144</string>
    <string name="value_call_consult_time">09:00-20:00</string>
    <string name="value_cs_online">在线客服</string>
    <string name="value_cs_online_time">09:00-20:00</string>
    <string name="value_clean_cache">0KB</string>
    <string name="value_amount_explain">服务费用</string>
    <string name="value_order_remark">订单备注</string>
    <string name="value_service_selected">已选服务</string>
    <string name="value_order_info">订单信息</string>
    <string name="value_select_pay_way">选择付款方式</string>
    <string name="unit_sex_male">男</string>
    <string name="unit_sex_female">女</string>
    <string name="unit_sex_other">其他</string>
    <string name="unit_sunday">周日</string>
    <string name="unit_monday">周一</string>
    <string name="unit_tuesday">周二</string>
    <string name="unit_wednesday">周三</string>
    <string name="unit_thursday">周四</string>
    <string name="unit_friday">周五</string>
    <string name="unit_saturday">周六</string>
    <string name="confirm_cancel_follow">取消关注？</string>
    <string name="confirm_set_can_not_subscribe">确定设置为\"请假\"状态？</string>
    <string name="confirm_set_can_subscribe">确定设置为\"可预约\"状态？</string>
    <string name="confirm_set_info">此资料提交后不能再次修改\n是否确认提交审核？</string>
    <string name="confirm_logout">确定退出登录吗？</string>
    <string name="confirm_clean_cache">确定清除缓存？</string>
    <string name="toast_input_number_of_people">请填写正确的人数</string>
    <string name="toast_order_service">请正确填写信息</string>
    <string name="toast_reserve_success">预定成功！</string>
    <string name="toast_not_email">请输入正确的Email</string>
    <string name="toast_not_pass_length">密码长度为8-16位</string>
    <string name="toast_login_success">登录成功</string>
    <string name="toast_logout">再按一次退出PianoCourse</string>
    <string name="toast_not_code_length">请输入6位数字验证码</string>
    <string name="toast_account_error">账号有误</string>
    <string name="toast_sys_error">系统错误</string>
    <string name="toast_get_account_error">获取用户信息失败</string>
    <string name="toast_no_more">没有更多了...</string>
    <string name="toast_up_img_fail">上传失败</string>
    <string name="toast_pass_not_equal">密码不一致</string>
    <string name="toast_find_pass_success">操作成功</string>
    <string name="toast_no_name">请输入昵称</string>
    <string name="toast_success">Success</string>
    <string name="toast_no_data">暂无数据</string>
    <string name="toast_sdcard_not_exist_error">请插入SD卡</string>
    <string name="toast_recording_error">语音录制失败</string>
    <string name="toast_not_phone">请输入正确的手机号</string>
    <string name="toast_not_phone_or_email">请输入正确的手机号或邮箱</string>
    <string name="toast_no_name2">请输入姓名</string>
    <string name="toast_guide_leave">顾问请假了！</string>
    <string name="toast_login">请先登录PianoCourse?</string>
    <string name="toast_date">请选择正确的时间</string>
    <string name="toast_no_guide">负责顾问信息有误</string>
    <string name="toast_no_comment">暂无评论</string>
    <string name="toast_person_too_much">预定人数超限，可以预约%1$d人</string>
    <string name="toast_choose_account">请选择支付账号</string>
    <string name="toast_done">已完成</string>
    <string name="toast_pass_is_incorrect">用户不存在或密码不正确</string>
    <string name="toast_verify_code_error">验证码错误或系统异常</string>
    <string name="placeholder_language">语种:%1$s</string>
    <string name="placeholder_area">服务区域:%1$s</string>
    <string name="placeholder_month">%1$d月</string>
    <string name="content_account_0">622424338877333</string>
    <string name="content_account_1">422424339877877</string>
    <string name="content_pay_ins">付款完成后，点击下方上传支付凭证，并上传支付信息\n当前未支付的订单可以在 我的-订单 中查看</string>
    <string name="content_question">遇到问题请</string>
    <string name="content_comment">评价</string>
    <string name="content_history">历史</string>
    <string name="content_cultural">人文</string>
    <string name="content_food">美食</string>
    <string name="content_recreation">娱乐</string>
    <string name="content_nature">自然</string>
    <string name="content_video">视频</string>
    <string name="content_activity">体验</string>
    <string name="content_upload_id_pic">请上传手持身份证的正面照一张</string>
    <string name="content_yes">是</string>
    <string name="content_no">否</string>
    <string name="content_set_info_done">您的信息已经提交</string>
    <string name="content_set_info_done2">我们的工作人员会在24小时内与您联系</string>
    <string name="content_comment_count">%1$d条评论</string>
    <string name="content_welcome">PianoCourse欢迎您</string>
    <string name="content_login_alert">请先登录/注册</string>
    <string name="content_total">总计:&#160;</string>
    <string name="hint_phone">手机</string>
    <string name="hint_pass">密码(8-16位)</string>
    <string name="hint_verification_code">填写您收到的验证码</string>
    <string name="hint_pass_confirm">确认密码</string>
    <string name="hint_country">+86</string>
    <string name="hint_avatar">选择头像</string>
</resources>