<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    android:padding="@dimen/space_large">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/country"
            style="@style/text_black_common"
            android:layout_width="64dp"
            android:layout_marginStart="@dimen/space_normal"
            android:hint="@string/hint_country" />

        <EditText
            android:id="@+id/email"
            style="@style/edit_text_common"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/hint_phone"
            android:inputType="phone" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/shape_white_border_bottom">

        <EditText
            android:id="@+id/verification_code"
            style="@style/edit_text_common"
            android:background="@null"
            android:hint="@string/hint_verification_code"
            android:inputType="text" />

        <TextView
            android:id="@+id/re_send"
            style="@style/text_small_black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/space_normal"
            android:background="@drawable/shape_tra_black_stroke"
            android:gravity="center"
            android:minWidth="56dp"
            android:paddingStart="@dimen/space_normal"
            android:paddingRight="@dimen/space_normal"
            android:text="@string/btn_send_code" />

    </RelativeLayout>

    <EditText
        android:id="@+id/pass"
        style="@style/edit_text_common"
        android:hint="@string/hint_pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/pass_confirm"
        style="@style/edit_text_common"
        android:hint="@string/hint_pass_confirm"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/sign_in"
        style="@style/button_large"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/space_large"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_sign_up" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:paddingStart="@dimen/space_normal"
        android:paddingEnd="@dimen/space_normal">

        <TextView
            android:id="@+id/login"
            style="@style/text_small_black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/btn_login" />

        <TextView
            android:id="@+id/help"
            style="@style/text_small_black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:text="@string/btn_help" />

    </RelativeLayout>

    <TextView
        android:id="@+id/terms_of_service"
        style="@style/text_small_gray"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_gravity="bottom"
        android:layout_marginEnd="@dimen/space_normal"
        android:gravity="center"
        android:text="@string/btn_terms_of_service_confirm" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="@dimen/item_height_small"
            android:layout_height="@dimen/item_height_small"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_cancel" />
    </RelativeLayout>

</LinearLayout>
