<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_corner_white"
        android:orientation="vertical"
        android:padding="@dimen/space_large">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:src="@mipmap/ic_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/country"
                style="@style/text_black_common"
                android:layout_width="64dp"
                android:layout_marginStart="@dimen/space_normal"
                android:hint="@string/hint_country" />

            <EditText
                android:id="@+id/email"
                style="@style/edit_text_common"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/hint_phone"
                android:inputType="phone" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@drawable/shape_white_border_bottom">

            <EditText
                android:id="@+id/verification_code"
                style="@style/edit_text_common"
                android:background="@null"
                android:hint="@string/hint_verification_code"
                android:inputType="text" />

            <TextView
                android:id="@+id/re_send"
                style="@style/text_small_black"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/space_normal"
                android:background="@drawable/shape_tra_black_stroke"
                android:gravity="center"
                android:minWidth="56dp"
                android:paddingStart="@dimen/space_normal"
                android:paddingRight="@dimen/space_normal"
                android:text="@string/btn_send_code" />

        </RelativeLayout>

        <EditText
            android:id="@+id/pass"
            style="@style/edit_text_common"
            android:hint="@string/hint_pass"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/pass_confirm"
            style="@style/edit_text_common"
            android:hint="@string/hint_pass_confirm"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/finish"
            style="@style/button_large"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/space_large"
            android:layout_marginEnd="8dp"
            android:text="@string/btn_finish" />

        <TextView
            android:id="@+id/help"
            style="@style/text_small_black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginEnd="@dimen/space_normal"
            android:gravity="center_vertical"
            android:text="@string/btn_help" />

    </LinearLayout>

</ScrollView>
