<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:nv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_large">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/avatar_large"
            android:layout_height="@dimen/avatar_large"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:scaleType="centerCrop"
            android:src="@drawable/shape_circle_gray" />

        <TextView
            style="@style/text_smaller_gray"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center"
            android:text="@string/hint_avatar" />

        <com.zconly.pianocourse.widget.MKeyValueEditView
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_large"
            android:background="@drawable/selector_white_gray_light"
            android:minHeight="@dimen/item_height"
            nv:arrow="false"
            nv:imeOptions="done"
            nv:keyColor="@color/color_text_gray"
            nv:name="@string/key_nickname"
            nv:valueColor="@color/color_text_black" />

        <include layout="@layout/view_line_h" />

        <com.zconly.pianocourse.widget.MKeyValueView
            android:id="@+id/sex"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@drawable/selector_white_gray_light"
            nv:arrow="false"
            nv:keyColor="@color/color_text_gray"
            nv:name="@string/key_sex"
            nv:valueColor="@color/color_text_black" />

        <include layout="@layout/view_line_h" />

        <com.zconly.pianocourse.widget.MKeyValueView
            android:id="@+id/birth"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@drawable/selector_white_gray_light"
            nv:arrow="false"
            nv:keyColor="@color/color_text_gray"
            nv:name="@string/key_birth"
            nv:valueColor="@color/color_text_black" />

        <include layout="@layout/view_line_h" />

        <com.zconly.pianocourse.widget.MKeyValueView
            android:id="@+id/piano_time"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:background="@drawable/selector_white_gray_light"
            nv:arrow="false"
            nv:keyColor="@color/color_text_gray"
            nv:name="@string/key_piano_time"
            nv:valueColor="@color/color_text_black" />

        <include layout="@layout/view_line_h" />

        <com.zconly.pianocourse.widget.MKeyValueView
            android:id="@+id/piano_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_white_gray_light"
            android:minHeight="@dimen/item_height"
            nv:arrow="true"
            nv:keyColor="@color/color_text_gray"
            nv:name="@string/key_piano_level"
            nv:valueColor="@color/color_text_black" />

        <include layout="@layout/view_line_h" />

        <com.zconly.pianocourse.widget.MKeyValueEditView
            android:id="@+id/signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_white_gray_light"
            android:minHeight="@dimen/item_height"
            nv:arrow="false"
            nv:imeOptions="done"
            nv:keyColor="@color/color_text_gray"
            nv:name="@string/key_signature"
            nv:valueColor="@color/color_text_black" />

        <include layout="@layout/view_line_h" />

        <TextView
            android:id="@+id/finish"
            style="@style/button_large"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginEnd="@dimen/space_normal"
            android:text="@string/btn_finish" />

        <TextView
            android:id="@+id/help"
            style="@style/text_normal_black"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/space_large"
            android:gravity="center_vertical"
            android:text="@string/btn_help" />

    </LinearLayout>

</ScrollView>
