<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    android:padding="@dimen/space_large">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/country"
            style="@style/text_black_common"
            android:layout_width="64dp"
            android:layout_marginStart="@dimen/space_normal"
            android:hint="@string/hint_country" />

        <EditText
            android:id="@+id/email"
            style="@style/edit_text_common"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/hint_phone"
            android:inputType="phone" />
    </LinearLayout>

    <EditText
        android:id="@+id/pass"
        style="@style/edit_text_common"
        android:hint="@string/hint_pass"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/login"
        style="@style/button_large"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/space_large"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="32dp">

        <TextView
            android:id="@+id/sign_up"
            style="@style/text_small_black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/space_normal"
            android:text="@string/btn_create_new_contact" />

        <TextView
            android:id="@+id/find_pass"
            style="@style/text_small_black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/space_normal"
            android:text="@string/btn_find_pass" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="@dimen/item_height_small"
            android:layout_height="@dimen/item_height_small"
            android:layout_gravity="center_horizontal"
            android:scaleType="center"
            android:src="@mipmap/ic_cancel" />
    </LinearLayout>

</LinearLayout>
