<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:kv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.zconly.pianocourse.widget.MKeyValueView
        android:id="@+id/act_setting_clean_cache"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="@dimen/space_normal"
        android:background="@drawable/selector_white_gray_light"
        kv:name="@string/key_clean_cache" />

    <include layout="@layout/view_line_h" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/selector_white_gray_light"
        android:onClick="onClick"
        android:paddingLeft="@dimen/space_large"
        android:paddingRight="@dimen/space_large"
        android:visibility="gone">

        <TextView
            style="@style/text_normal_black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/key_push_switch" />

        <Switch
            android:id="@+id/act_setting_push_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <com.zconly.pianocourse.widget.MKeyValueView
        android:id="@+id/act_setting_modify"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="@dimen/space_normal"
        android:background="@drawable/selector_white_gray_light"
        android:onClick="onClick"
        kv:name="@string/key_modify_pass" />

    <include layout="@layout/view_line_h" />

    <com.zconly.pianocourse.widget.MKeyValueView
        android:id="@+id/act_setting_upgrade"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:background="@drawable/selector_white_gray_light"
        kv:name="@string/key_upgrade" />

    <include layout="@layout/view_line_h" />

    <TextView
        android:id="@+id/act_setting_logout"
        style="@style/button_large"
        android:layout_marginTop="@dimen/space_large"
        android:gravity="center"
        android:text="@string/btn_logout" />

</LinearLayout>
